syntax = "proto3";

package product;

option go_package = "proto/productpb;productpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// =====================
// PRODUCT MESSAGES
// =====================

message Product {
  string id = 1;
  string shop_id = 2;
  string name = 4;
  string category = 5;
  double price = 6;
  string description = 7;
  google.protobuf.StringValue detail = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// =====================
// CREATE
// =====================

message CreateProductRequest {
  string name = 1;
  double price = 2;
  string description = 3;
  string detail = 4;
  string category = 5;
}

message CreateProductResponse {
  Product product = 1;
}

// =====================
// GET BY ID
// =====================

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  Product product = 1;
}

// =====================
// UPDATE
// =====================

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  double price = 3;
  string description = 4;
  string category = 5;
  string detail = 6;
}

message UpdateProductResponse {
  Product product = 1;
}

// =====================
// DELETE
// =====================

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  string message = 1;
}

  message ListProductsByShopRequest {
    string shop_id = 1;
    int32 limit = 2;
    string cursor = 3;
    string search = 4;
    string filter = 5;
    string sort = 6;
  }

  message ListProductsByShopResponse {
    repeated Product products = 1;
    google.protobuf.StringValue next_cursor = 2;
  }

// =====================
// SERVICE
// =====================

service ProductService {

  rpc ListProductsByShop(ListProductsByShopRequest)
      returns (ListProductsByShopResponse);

  rpc CreateProduct(CreateProductRequest)
      returns (CreateProductResponse);

  rpc GetProductByID(GetProductRequest)
      returns (GetProductResponse);

  rpc UpdateProduct(UpdateProductRequest)
      returns (UpdateProductResponse);

  rpc DeleteProduct(DeleteProductRequest)
      returns (DeleteProductResponse);
}
